# AI-simulated-interview

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  start.ps1  stop.ps1
.codex-temp/backend-snapshot-provider-fix/: AiInterview.sln
.github/workflows/: ci.yml
ai-service/: Dockerfile  README.md  pyproject.toml
ai-service/app/: __init__.py  main.py
ai-service/app/api/: __init__.py  router.py
ai-service/app/api/routes/: __init__.py  document.py  evaluation.py  interview.py  rag.py  recommend.py  report.py
ai-service/app/core/: security.py  settings.py
ai-service/app/providers/: __init__.py  base.py  mock_provider.py  openai_compatible_provider.py
ai-service/app/schemas/: document.py  interview.py  rag.py  recommendation.py  report.py
ai-service/app/services/: __init__.py  backend_ai_settings.py  dependencies.py  document_service.py  evaluation_service.py  interview_service.py  rag_service.py  recommendation_service.py  report_service.py
ai-service/app/tests/: test_document.py  test_health.py  test_interview_route.py  test_interview_service.py  test_openai_provider_enforcement.py  test_provider_dependencies.py
ai-service/app/workers/: celery_app.py  tasks.py
ai-service/tests/: test_document.py  test_internal_auth.py  test_interview_route.py  test_interview_service.py
backend/: README.md
docs-shared/: README.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: bootstrap-frontend.mjs  ensure-local-infra.mjs  predev.mjs
(+390 files in other folders)
